# niepce_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bvh_test.cc  camera.h  cmake_config.h  cmake_config.h.in  main.cc  material.h  niepce.h  random.h  ray.h  sphere.h  vector3.h
accelerators/: CMakeLists.txt  bvh.cc  bvh.h  bvh_bucket.cc  bvh_bucket.h  bvh_node.cc  bvh_node.h  bvh_primitive_info.cc  bvh_primitive_info.h
camera/: CMakeLists.txt  camera.cc  camera.h  image_sensor.cc  image_sensor.h  pinhole_camera.cc  pinhole_camera.h
cameras/: CMakeLists.txt  camera.cc  camera.h
core/: CMakeLists.txt  boundingbox2.cc  boundingbox2.h  boundingbox3.cc  boundingbox3.h  common.h  debug.h  efloat.cc  efloat.h  hit_record.cc  hit_record.h  interaction.cc  interaction.h  logger.cc  logger.h  main.cc  matrix4x4.cc  matrix4x4.h  niepce.h  normal.h  normal3.h  path.cc  path.h  point2.cc  point2.h  point3.cc  point3.h  point4.h  ray.cc  ray.h  ray_differential.cc  ray_differential.h  render_manager.cc  render_manager.h  scene.cc  scene.h  settings.cc  settings.h  size.cc  size.h  (+13 more)
geometries/: CMakeLists.txt  boundingbox2.h  boundingbox3.cc  boundingbox3.h  matrix4x4.cc  matrix4x4.h  normal3.cc  normal3.h  point2.h  point3.cc  point3.h  point4.cc  point4.h  ray.cc  ray.h  vector2.cc  vector2.h  vector3.h  vector4.h
geometry/: CMakeLists.txt  face.cc  face.h  geometry.cc  geometry.h  geometry_common.h  sphere.cc  sphere.h  triangle.cc  triangle.h  vertex.cc  vertex.h
image/: #pixel.h#  CMakeLists.txt  film.cc  film.h  image.cc  image.h
integrators/: integrator.cc  integrator.h  path_tracer.cc  path_tracer.h
lights/: light.cc  light.h
main/: main.cc
material/: CMakeLists.txt  lambert.cc  lambert.h  light.cc  light.h  material.cc  material.h  material_manager.cc  material_manager.h  phong.cc  (+1 more)
src/: CMakeLists.txt  main.cc
src/accelerator/: CMakeLists.txt  aggregation.cc  aggregation.h  bvh.cc  bvh.h  bvh_node.cc  bvh_node.h  bvh_primitive_info.h
src/algebra/: vector2f.h  vector2f.inl
src/bsdf/: CMakeLists.txt  beckmann_distribution.cc  beckmann_distribution.h  bsdf.cc  bsdf.h  bsdf_record.cc  bsdf_record.h  bxdf.cc  bxdf.h  bxdf_record.cc  bxdf_record.h  fresnel.cc  fresnel.h  lambert.cc  lambert.h  microfacet.cc  microfacet.h  microfacet_distribution.h  microfacet_reflection.cc  microfacet_reflection.h  oren_nayar.cc  oren_nayar.h  specular_reflection.cc  specular_reflection.h  trowbridge_reitz.cc  trowbridge_reitz.h  trowbridge_reitz_distribution.cc  trowbridge_reitz_distribution.h
src/bxdf/: CMakeLists.txt  bsdf.cc  bsdf.h  bsdf_utils.cc  bsdf_utils.h  bxdf.cc  bxdf.h  fresnel.cc  fresnel.h  lambert.cc  lambert.h  microfacet.cc  microfacet.h  oren_layar.cc  oren_layar.h  specular.cc  specular.h
src/bxdf/buf/: fresnel.cc  fresnel.h  microfacet_distribution.cc  microfacet_distribution.h  microfacet_reflection.cc  microfacet_reflection.h  specular.cc  specular.h  specular_reflection.h
src/camera/: CMakeLists.txt  camera.cc  camera.h  camera_sample.h  pinhole.cc  pinhole.h  realistic_camera.cc  realistic_camera.h
src/core/: CMakeLists.txt  algebra.h  assembled_tiles.cc  assembled_tiles.h  attributes.cc  attributes.h  bounds2.cc  bounds2.h  bounds2f.cc  bounds2f.h  bounds2f.inl  bounds3f.cc  bounds3f.h  clipping_film.cc  clipping_film.h  film.cc  film.h  film_tile.cc  film_tile.h  geometry.cc  geometry.h  image.cc  image.h  imageio.cc  imageio.h  interaction.h  intersection.cc  intersection.h  ioimage.cc  ioimage.h  material_attributes.cc  material_attributes.h  material_param.h  matrix4x4.h  matrix4x4.inl  matrix4x4f.cc  matrix4x4f.h  matrix4x4f.inl  memory.cc  memory.h  (+44 more)
src/ext/: CMakeLists.txt
src/filter/: filter.h
src/integrator/: CMakeLists.txt  debug.cc  debug.h  integrator.h  path_tracer.cc  path_tracer.h  sample_integrator.cc  sample_integrator.h
src/light/: CMakeLists.txt  area.cc  area.h  area_light.cc  area_light.h  ibl.cc  ibl.h  infinite_light.cc  infinite_light.h  light.cc  light.h
src/main/: main.cc
src/material/: CMakeLists.txt  bsdf.h  glass.cc  glass.h  material.cc  material.h  material_parameters.cc  material_parameters.h  matte.cc  matte.h  metal.cc  metal.h  microfacet_test.cc  microfacet_test.h  mirror.cc  mirror.h  plastic.cc  plastic.h
src/math/: CMakeLists.txt  matrix4x4f.inl  point2f.cc  point2f.h  point2f.inl  point3f.cc  point3f.h  point3f.inl  vector2f.h  vector3f.cc  vector3f.h  vector3f.inl  vector4f.h
src/maya/: CMakeLists.txt  camera_exporter.cc  camera_exporter.h  camera_node.h  command.cc  extension attributes.cc  extension attributes.h  plugin_core.h  plugin_main.cc  plugin_maya.cc  render_command.cc  render_command.h  scene_exporter.cc  scene_exporter.h  utilities.cc  utilities.h
src/maya/python/: hypershade_callbacks.py  registerNiepceRenderer.py
src/memory/: CMakeLists.txt  arena_allocator.cc  arena_allocator.h
src/primitive/: CMakeLists.txt  aggregate.cc  aggregate.h  individual.cc  individual.h  primitive.cc  primitive.h
src/random/: CMakeLists.txt  pcg.cc  pcg.h  xorshift.cc  xorshift.h
src/renderer/: CMakeLists.txt  path_tracer.cc  path_tracer.h  renderer.cc  renderer.h
src/sampler/: CMakeLists.txt  hammersley.cc  hammersley.h  low_discrepancy_sequence.cc  low_discrepancy_sequence.h  random_sampler.cc  random_sampler.h  sampler.cc  sampler.h  sampler_utils.cc  sampler_utils.h
src/scene/: CMakeLists.txt  loader.cc  loader.h  scene.cc  scene.h  scene_creator.cc  scene_creator.h  scene_importer.cc  scene_importer.h  scene_loader.cc  scene_loader.h  scene_utils.cc  scene_utils.h
src/shape/: CMakeLists.txt  shape.cc  shape.h  sphere.cc  sphere.h  triangle.cc  triangle.h  vertex.h
src/spectrum/: cie.h  spectrum.cc  spectrum.h
src/texture/: CMakeLists.txt  bool_texture.cc  bool_texture.h  constant_texture.cc  constant_texture.h  float_texture.cc  float_texture.h  image_map.cc  image_map.h  image_texture.cc  image_texture.h  texture.cc  texture.h  value_texture.cc  value_texture.h
test/: CMakeLists.txt  matrix_test.cc  ray_intersection.cc  vector2f_test.cc  vector3f_test.cc  vector4f_test.cc
(+58 files in other folders)
